Adjust fk of job_table + Handle jobs
