# src/controller/recruiterController.js
@@ -11,6 +11,18 @@ const createRecruiterProfile = async (req, res) => {
     }
 };
 
+const postJob = async (req, res) => {
+   try {
+        const email = req.user.email; // Get email from the request body or from session/authentication
+        // console.log(res)
+        console.log("Email:", email);
+        let newJob = await recruiterService.postJob(email, req.body);
+        return res.status(201).json(newJob);
+    } catch (e) {
+        return res.status(500).json({message: e.message });
+    }
+};
+
 
 const updateCompanyProfile = async (req, res) => {
     const result = await recruiterService.updateCompanyProfile(req.params.recruiterId, req.body);
@@ -21,14 +33,16 @@ const updateCompanyProfile = async (req, res) => {
     }
 };
 
-const postJob = async (req, res) => {
-    const result = await recruiterService.postJob(req.body);
+const getCandidateProfile = async (req, res) => {
+    const result = await recruiterService.getCandidateProfile(req.params.candidateId);
     if (result.status === 'success') {
-        res.status(201).json(result.job);
+        res.status(200).json(result.profile);
     } else {
-        res.status(500).json({ message: result.message });
+        res.status(404).json({ message: result.message });
     }
 };
+
+
 
 const updateJob = async (req, res) => {
     const result = await recruiterService.updateJob(req.params.jobId, req.body);
@@ -66,14 +80,7 @@ const getAllCandidates = async (req, res) => {
     }
 };
 
-const getCandidateProfile = async (req, res) => {
-    const result = await recruiterService.getCandidateProfile(req.params.candidateId);
-    if (result.status === 'success') {
-        res.status(200).json(result.profile);
-    } else {
-        res.status(404).json({ message: result.message });
-    }
-};
+
 
 export default {
     createRecruiterProfile,
